--- a/HappyCoffee.WebUI/Views/Home/Privacy.cshtml
+++ b/HappyCoffee.WebUI/Views/Home/Privacy.cshtml
@@ -1,6 +1,15 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿
 
-<p>Use this page to detail your site's privacy policy.</p>
+<h1>İLETİŞİM</h1>
+<hr />
+<label>LinkedIn :</label><span>
+    <a href="https://www.linkedin.com/in/1hakansahin/">Profile git.</a></span>
+<hr />
+<a onclick="Mail()" class="btn btn-success" >Mail iste</a>
+<hr />
+<script>
+    function Mail() {
+        alert("Mail Adress : hknshn55@hotmail.com" )
+    }
+    
+</script>
