--- a/HappyCoffee.WebUI/Views/Home/Index.cshtml
+++ b/HappyCoffee.WebUI/Views/Home/Index.cshtml
@@ -36,6 +36,7 @@
                                 </div>
                             </div>
                         </div>
+               <a class="btn btn-primary form-control" href="Home/Detail/${item.id}">Detaylar</a>
                     </div>
                 </div>
                  `
